Update deploy workflow to use postamt.julianfalk.dev
Changed webhook URL from postamt.ai to postamt.julianfalk.dev

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger deploy
-        run: curl -s https://postamt.ai/deploy.php
+        run: curl -s https://postamt.julianfalk.dev/deploy.php
