Friday, 02th January, 2026 @ 20:58 Uhr - Edited files: , .env.example,

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # Application
 APP_ENV=development
 APP_DEBUG=true
-BASE_URL=http://localhost:8080
+BASE_URL=https://postamt.julianfalk.dev
 
 # Google OAuth (for user login)
 # Create credentials at: https://console.cloud.google.com/apis/credentials
