--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,7 @@ services:
     volumes:
       - ./data:/var/www/html/data
       - ./storage:/var/www/html/storage
-    environment:
-      - APP_ENV=production
-      - APP_DEBUG=false
+    env_file:
+      - .env
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
